--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -29,7 +29,7 @@
     .chat--main__message__form__box
       .chat--main__message--form__box--message
         %form(action="/") 
-          %input(type="text" placeholder='type a message' style="border-width:0px;border-style:None;")/
+          %input(type="text" placeholder='type a message')/
         %label{class: "chat--main__message__form__box--message--img"}
           =icon('fas', 'image')
           %input(type="file" class= "chat--main__message__form__box--message--img--file")/
