--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,13 +2,13 @@
   .side--bar__user--name
     .side--bar__user--name__top--items
       %p.side--bar__user--name__top--items__name
-        Kaito
+        = current_user.name
       %ul.side--bar__user--name__top--items__icons
         %li.side--bar__user--name__top--items__icons__new
           = link_to "#" do
             = icon("far", "edit")
         %li.side--bar__user--name__top--items__icons__setting
-          = link_to "#" do
+          = link_to "users/#{current_user.id}/edit" do
             = icon("fas", "cog")
   .side--bar__group--list
     .side--bar__group--list__logo
