--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -28,10 +28,10 @@
   .chat--main__message__form
     .chat--main__message__form__box
       .chat--main__message--form__box--message
-        %form(action="/") 
-          %input(type="text" placeholder='type a message')/
-        %label{class: "chat--main__message__form__box--message--img"}
-          =icon('fas', 'image')
-          %input(type="file" class= "chat--main__message__form__box--message--img--file")/
+        = form_for [@group, @message] do |f|
+          = f.text_field :content, class: 'chat--main__message--form__box--message--form'
+          = f.label :image, class: 'chat--main__message__form__box--message--img'
+            =icon('fas', 'image')
+            = f.file_field :image, class: 'hidden'
     .chat--main__message__form__send
-      %input(type="submit" value="Send" class="chat--main__message__form__send__btn")/
+      =f.submit 'Send',class: 'form__submit' 
