--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -13,25 +13,17 @@
       .chat--main__message--list__show--info
         Kaito 2020/02/27(Thu) 7:00:00
       .chat--main__message--list__show--comment
-        おはよう！
-    .chat--main__message--list__show
-      .chat--main__message--list__show--info
-        Kaito 2020/02/27(Thu) 12:30:00
-      .chat--main__message--list__show--comment
-        こんにちは！
-    .chat--main__message--list__show
-      .chat--main__message--list__show--info
-        Kaito 2020/02/27(Thu) 20:00:00
-      .chat--main__message--list__show--comment
-        こんばんわ！
+        = render @messages
+          
+
 
   .chat--main__message__form
     .chat--main__message__form__box
       .chat--main__message--form__box--message
         = form_for [@group, @message] do |f|
-          = f.text_field :content, class: 'chat--main__message--form__box--message--form'
-          = f.label :image, class: 'chat--main__message__form__box--message--img'
-            =icon('fas', 'image')
-            = f.file_field :image, class: 'hidden'
-    .chat--main__message__form__send
-      =f.submit 'Send',class: 'form__submit' 
+          = f.text_field :content, class: 'chat--main__message--form__box--message--form', placeholder: 'type a message' do
+            = f.label :image, class: 'chat--main__message__form__box--message--img' do
+              =icon('fas', 'image')
+              = f.file_field :image, class: 'hidden'
+          = f.submit 'Send', class: 'form__submit' 
+    
