--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -13,7 +13,7 @@
   .side--bar__group--list
     - current_user.groups.each do |group|
       .group
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .side--bar__group--list__logo
             = group.name
           .side--bar__group--list__message
