--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,20 +10,18 @@
         Edit
   .chat--main__message--list
     .chat--main__message--list__show
-      .chat--main__message--list__show--info
-        Kaito 2020/02/27(Thu) 7:00:00
       .chat--main__message--list__show--comment
         = render @messages
           
 
 
-  .chat--main__message__form
-    .chat--main__message__form__box
-      .chat--main__message--form__box--message
-        = form_for [@group, @message] do |f|
-          = f.text_field :content, class: 'chat--main__message--form__box--message--form', placeholder: 'type a message' do
-            = f.label :image, class: 'chat--main__message__form__box--message--img' do
-              =icon('fas', 'image')
-              = f.file_field :image, class: 'hidden'
-          = f.submit 'Send', class: 'form__submit' 
-    
+  .chat--main__form
+    = form_for [@group, @message] do |f|
+      .chat--main__form__box
+        = f.text_field :content,class: 'chat--main__form__box__comment', placeholder: 'type a message'
+        .chat--main__form__box__comment__message
+          = f.label :image, class: 'chat--main__form__box__comment__message--img' do
+            = icon("fas", "image" ,class:'chat--main__form__box__comment__message--img--icon')
+            = f.file_field :image, class: 'chat--main__form__box__comment__message--img--file'
+        = f.submit 'Send', class: 'chat--main__form__box__send' 
+  
