show new messages in side_bar

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -17,4 +17,4 @@
           .side--bar__group--list__logo
             = group.name
           .side--bar__group--list__message
-            まだメッセージがありません
+            = group.show_last_message
