--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -144,6 +144,7 @@ $form-btn: #38aef0; //editやsendボタンに使う色
       display: flex;
       &__comment{
         width: 100%;
+        padding-left: 10px;
         &__message{
           width: 0%;
           background-color:#fff;
