--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,7 +8,7 @@
         - @user.each do |user|
           = user.name
     .chat--main__group--info__edit
-      = link_to "#"  do
+      = link_to edit_group_path(@group)  do
         Edit
   .chat--main__message--list
     .chat--main__message--list__show
