--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,14 +1,14 @@
 .side--bar
   .side--bar__user--name
     .side--bar__user--name__top--items
-      %p.side--bar__user--name__top--items__name
+      %h3.side--bar__user--name__top--items__name
         = current_user.name
       %ul.side--bar__user--name__top--items__icons
         %li.side--bar__user--name__top--items__icons__new
           = link_to new_group_path do
             = icon("far", "edit")
         %li.side--bar__user--name__top--items__icons__setting
-          = link_to "users/#{current_user.id}/edit" do
+          = link_to edit_user_path(current_user) do
             = icon("fas", "cog")
   .side--bar__group--list
     - current_user.groups.each do |group|
