--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -5,8 +5,8 @@
         = @group.name
       .chat--main__group--info__left--members
         Member :
-        - @user.each do |user|
-          = user.name
+        - @group.group_users.each do |group_users|
+          = group_users.user.name
     .chat--main__group--info__edit
       = link_to edit_group_path(@group)  do
         Edit
